se cambio index

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </h1>
 <nav>
     <ul>
-        <li> Quién soy</li>
+        <li> Quién soy?</li>
         <li> Galería</li>
         <li> Contacto</li>
     </ul>
