--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link href="./css/styles.css" rel="stylesheet" >
+<!-- <link href="./css/styles.css" rel="stylesheet" > -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>BA Multiplica - Proyecto</title>
 </head>
 <body>
@@ -27,12 +28,37 @@
             <p>Hola! Soy Cinthia Anabella Carrizo y soy fotógrafa, casi licenciada en psicología y una aprendiz de programación. Soy sureña, pero resido en Buenos Aires desde hace más de 10 años (casi un tercio de mi vida).
                 Trabajo como fotógrafa institucional y de sociales, pero lo que más me gusta son los shows. En la galería encontrarán algunas imágenes de recitales que tuve la suerte de cubrir. </p>
         </section>
-        <div>
+<!-- FOTOS         <div>
             <img src="FotoEruca.jpg" alt="Foto Recital Eruca" width=80% id=Foto-Eruca> 
                   <img src="FotoTheWarning.jpg" alt="Foto The Warning" width=30% class=fotos-chiquitas>
             <img src="FotoSV.jpg" alt="Foto Sobreviento" width=30% class=fotos-chiquitas>
             <img src="FotoTAN.jpg" alt="Foto Todo Aparenta Normal" width=30% class=fotos-chiquitas>
-                 </div>
+                 </div> -->
+                 <!-- CARRUSEL -->
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="FotoSV.jpg" class="d-block w-100" alt="FotoSV">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="FotoEruca.jpg" class="d-block w-100" alt="FotoEruca">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="FotoTheWarning.jpg" class="d-block w-100" alt="FotoTheWarning">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="FotoTAN.jpg" class="d-block w-100" alt="FotoTAN">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
 <br>
 <br>
         <section id="Contacto">
@@ -70,5 +96,6 @@
         <br>
         &copy;Todos los derechos reservados
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
