--- a/index.html
+++ b/index.html
@@ -13,21 +13,33 @@
         <h1>
             ca.fot
         </h1>
-<nav>
+<!--  <nav>
     <ul>
         <li> Quién soy?</li>
         <li> Galería</li>
         <li> Contacto</li>
     </ul>
+</nav>-->
+<nav>
+<ul class="nav justify-content-end">
+  <li class="nav-item">
+    <a class="nav-link" href="#">Galería</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link active" aria-current="page" href="#">Quien soy</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Contacto</a>
+  </li>
+  <!--  <li class="nav-item">
+    <a class="nav-link disabled">Disabled</a>
+  </li>-->
+</ul>
 </nav>
     </header>
     <main>
         <h2>Bienvenides</h2>
-        <section id="quien-soy">
-            <!--<h3>Quien soy</h3>-->
-            <p>Hola! Soy Cinthia Anabella Carrizo y soy fotógrafa, casi licenciada en psicología y una aprendiz de programación. Soy sureña, pero resido en Buenos Aires desde hace más de 10 años (casi un tercio de mi vida).
-                Trabajo como fotógrafa institucional y de sociales, pero lo que más me gusta son los shows. En la galería encontrarán algunas imágenes de recitales que tuve la suerte de cubrir. </p>
-        </section>
+
 <!-- FOTOS         <div>
             <img src="FotoEruca.jpg" alt="Foto Recital Eruca" width=80% id=Foto-Eruca> 
                   <img src="FotoTheWarning.jpg" alt="Foto The Warning" width=30% class=fotos-chiquitas>
@@ -61,6 +73,11 @@
                   </div>
 <br>
 <br>
+        <section id="quien-soy">
+            <!--<h3>Quien soy</h3>-->
+            <p>Hola! Soy Cinthia Anabella Carrizo y soy fotógrafa, casi licenciada en psicología y una aprendiz de programación. Soy sureña, pero resido en Buenos Aires desde hace más de 10 años (casi un tercio de mi vida).
+                Trabajo como fotógrafa institucional y de sociales, pero lo que más me gusta son los shows. En la galería encontrarán algunas imágenes de recitales que tuve la suerte de cubrir. </p>
+        </section>
         <section id="Contacto">
             <form action="/my-handling-form-page" method="post">
                 <ul>
@@ -96,6 +113,7 @@
         <br>
         &copy;Todos los derechos reservados
 </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<script src="js/script.js"></script>
+<!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
 </body>
 </html>
