--- a/index.html
+++ b/index.html
@@ -1,119 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- <link href="./css/styles.css" rel="stylesheet" > -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>BA Multiplica - Proyecto</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link href="./css/styles.css" rel="stylesheet" > -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <title>BA Multiplica - Proyecto</title>
 </head>
-<body>
-    <header>
-        <h1>
-            ca.fot
-        </h1>
-<!--  <nav>
-    <ul>
-        <li> Quién soy?</li>
-        <li> Galería</li>
-        <li> Contacto</li>
-    </ul>
-</nav>-->
-<nav>
-<ul class="nav justify-content-end">
-  <li class="nav-item">
-    <a class="nav-link" href="#">Galería</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Quien soy</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Contacto</a>
-  </li>
-  <!--  <li class="nav-item">
+
+<body class="p-3 mb-2 bg-secondary text-white" style="--bs-bg-opacity: .5;">
+
+  <header>
+    <h1>
+  ca.fot 
+  <!-- <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-camera" viewBox="0 0 40 40">
+      <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
+      <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
+    </svg> -->
+    </h1>
+    <nav>
+      <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link" href="#carruselfotos">Galería</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#quien-soy">Quien soy</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#Contacto">Contacto</a>
+        </li>
+        <!--  <li class="nav-item">
     <a class="nav-link disabled">Disabled</a>
   </li>-->
-</ul>
-</nav>
-    </header>
-    <main>
-        <h2>Bienvenides</h2>
-
-<!-- FOTOS         <div>
-            <img src="FotoEruca.jpg" alt="Foto Recital Eruca" width=80% id=Foto-Eruca> 
-                  <img src="FotoTheWarning.jpg" alt="Foto The Warning" width=30% class=fotos-chiquitas>
-            <img src="FotoSV.jpg" alt="Foto Sobreviento" width=30% class=fotos-chiquitas>
-            <img src="FotoTAN.jpg" alt="Foto Todo Aparenta Normal" width=30% class=fotos-chiquitas>
-                 </div> -->
-                 <!-- CARRUSEL -->
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="FotoSV.jpg" class="d-block w-100" alt="FotoSV">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="FotoEruca.jpg" class="d-block w-100" alt="FotoEruca">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="FotoTheWarning.jpg" class="d-block w-100" alt="FotoTheWarning">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="FotoTAN.jpg" class="d-block w-100" alt="FotoTAN">
-                      </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
-                    </button>
-                  </div>
-<br>
-<br>
-        <section id="quien-soy">
-            <!--<h3>Quien soy</h3>-->
-            <p>Hola! Soy Cinthia Anabella Carrizo y soy fotógrafa, casi licenciada en psicología y una aprendiz de programación. Soy sureña, pero resido en Buenos Aires desde hace más de 10 años (casi un tercio de mi vida).
-                Trabajo como fotógrafa institucional y de sociales, pero lo que más me gusta son los shows. En la galería encontrarán algunas imágenes de recitales que tuve la suerte de cubrir. </p>
-        </section>
-        <section id="Contacto">
-            <form action="/my-handling-form-page" method="post">
-                <ul>
-                 <li>
-                   <label for="name">Nombre:</label>
-                   <input type="text" id="name" name="user_name">
-                 </li>
-                 <li>
-                   <label for="mail">Email:</label>
-                   <input type="email" id="mail" name="user_mail">
-                 </li>
-                 <li>
-                   <label for="msg">Mensaje:</label>
-                   <textarea id="msg" name="user_message"></textarea>
-                 </li>
-                </ul>
-               </form>
-               <br>
-               <li class="button">
-                <button type="submit">Enviar</button>
-              </li>
-        </section>
-
-    </main>
+      </ul>
+    </nav>
+  </header>
+  <main>
+   <!--   <h2>Bienvenides</h2>-->
+    <!-- CARRUSEL -->
+    <div id="carruselfotos" class="carousel slide mx-auto" style="width: 80%" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item">
+          <img src="FotoSV.jpg" class="d-block w-100" alt="FotoSV">
+        </div>
+        <div class="carousel-item">
+          <img src="FotoEruca.jpg" class="d-block w-100" alt="FotoEruca">
+        </div>
+        <div class="carousel-item active">
+          <img src="FotoTheWarning.jpg" class="d-block w-100" alt="FotoTheWarning">
+        </div>
+        <div class="carousel-item">
+          <img src="FotoTAN.jpg" class="d-block w-100" alt="FotoTAN">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carruselfotos"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carruselfotos"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <br>
-<footer>
-    <a href="https://www.instagram.com/ca.fot/?hl=es-la">
-        <img src="https://cdn-icons-png.flaticon.com/512/87/87390.png" alt="Logo Instagram" height= "30px"> 
-            </a>
-        <a href="https://www.facebook.com/cinthiaanabellafotografia">
-          <img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRsFDJ8dalw34FuRF-vKCNqd4XVirmJ6qWKAw&usqp=CAU" alt="Logo Facebook" height= "30px">
-        </a>
+    <br>
+    <section id="quien-soy">
+      <div class="card text-white bg-secondary mb-3 mx-auto" style="max-width:24rem;">
+        <div class="card-body">
+          <h5 class="card-title">Quien soy</h5>
+          <p class="card-text">Hola! Soy Cinthia Anabella Carrizo y soy fotógrafa, casi licenciada en psicología y una aprendiz de
+        programación. Soy sureña, pero resido en Buenos Aires desde hace más de 10 años (casi un tercio de mi vida).
+        Trabajo como fotógrafa institucional y de sociales, pero lo que más me gusta son los shows. En la galería
+        encontrarán algunas imágenes de recitales que tuve la suerte de cubrir.</p>
+     </div>
+    </div>
+   </section>
+    <section id="Contacto">
+      <form>
+        <div class="mb-3">
+          <label for="exampleInputName" style="color:black" class="form-label">Nombre</label>
+          <input type="name" class="form-control" id="exampleInputName">
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label" style="color:black">Correo electrónico</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <div id="emailHelp" class="form-text">Nunca compartiremos su correo electrónico con nadie más.</div>
+        </div>
+        <div class="input-group">
+          <span class="input-group-text">Mensaje</span>
+          <textarea class="form-control" aria-label="With textarea"></textarea>
+        </div>
         <br>
-        &copy;Todos los derechos reservados
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+        <button type="submit" class="btn btn-primary me-md-2">Enviar</button>
+      </div>
+    </form>
+<!-- <form action="/my-handling-form-page" method="post">
+        <ul>
+          <li>
+            <label for="name">Nombre:</label>
+            <input type="text" id="name" name="user_name">
+          </li>
+          <li>
+            <label for="mail">Email:</label>
+            <input type="email" id="mail" name="user_mail">
+          </li>
+          <li>
+            <label for="msg">Mensaje:</label>
+            <textarea id="msg" name="user_message"></textarea>
+          </li>
+        </ul>
+      </form>
+      <br>
+      <li class="button">
+        <button type="submit">Enviar</button>
+      </li> -->
+    </section>
+  </main>
+  <br>
+  <footer>
+<div class="text-center">
+    <a href="https://www.instagram.com/ca.fot/?hl=es-la">
+      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-instagram" viewBox="0 0 30 30">
+        <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
+      </svg>
+    </a>
+    <a href="https://www.facebook.com/cinthiaanabellafotografia">
+      <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-facebook" viewBox="0 0 30 30">
+        <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+      </svg>
+    </a>
+    <br>
+   <p> &copy;Todos los derechos reservados 
+  <br>
+    Argentina 2022</p>
+</div>
 </footer>
-<script src="js/script.js"></script>
-<!--  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script> -->
+ <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
